Style cleanups.